[project]
name = "radio-telemetry-tracker-tower-comms-package"
version = "0.1.0"
description = ""
authors = [
    {name = "Tyler Flar",email = "tflar@ucsd.edu"}
]
requires-python = ">=3.13,<3.14"
packages = [
    {include = "radio_telemetry_tracker_tower_comms_package" },
]
dependencies = [
    "meshtastic (>=2.5.10,<3.0.0)",
    "grpcio-tools (>=1.69.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.2"
pytest = "^8.3.4"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--maxfail=5 --tb=short"

